[metadata]
name = byteprint
version = 1.2.0
author = nousername
author_email = 2467906561@qq.com
description = 字节跳动风格延迟逐元素打印库，支持字符串/容器，毫秒/秒模式切换 | ByteDance-style delayed element-wise printing library
keywords = print, delay, byte dance, 延迟打印, 容器打印
license = MIT
requires-python = >=3.9
long_description = 字节跳动风格延迟逐元素打印库，支持字符串、列表、元组、字典等类型，可切换毫秒/秒延迟模式，简化别名函数（bd/sbd/cbd），完善参数校验和双语警告，无额外依赖。| ByteDance-style delayed printing library, supports strings/lists/tuples/dicts, switchable delay modes, simplified aliases, validation and bilingual warnings, no extra dependencies.
long_description_content_type = text/plain

[options]
py_modules = byte
python_requires = >=3.9
